[tool.poetry]
name = "leveraged_trading"
version = "0.1.0"
description = ""
authors = ["Marc Sabaté <msabvid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
plotly = "^5.17.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
jupyter-bokeh = "^3.0.7"
bokeh = "^3.2.2"
dash = "^2.13.0"
streamlit = "^1.28.0"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
